--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -6,14 +6,17 @@
 - name: install dependencies
   include_tasks: deps.yaml
 
+- name: chrony
+  include_tasks: chrony.yaml
+
 - name: tune host
   include_tasks: tuner.yaml
 
-- name: setup disks
-  include_tasks: disks.yaml
-
 - name: folders
   include_tasks: dirs.yaml
+
+- name: setup disks
+  include_tasks: disks.yaml
 
 - name: swap
   include_tasks: swap.yaml
