--- a/roles/common/tasks/disks.yaml
+++ b/roles/common/tasks/disks.yaml
@@ -1,20 +1,20 @@
 - name: check mount
   become: true
   become_user: root
-  shell: df -h | grep mnt/solana-accounts
+  shell: df -h | grep mnt/solana-ledger
   ignore_errors: yes
   register: mount_mnt
 
 - name: format disks with ext4
   become: true
   become_user: root
-  shell: mkfs.ext4 /dev/{{ accounts_disk }}
+  shell: mkfs.ext4 /dev/{{ ledger_disk }}
   when: mount_mnt.rc != 0
 
 - name: mount disks for accounts
   become: true
   become_user: root
-  shell: mount /dev/{{ accounts_disk }} /mnt/solana-accounts
+  shell: mount /dev/{{ ledger_disk }} /mnt/solana-ledger
   when: mount_mnt.rc != 0
 
 - name: add mounted disk to fstab
@@ -23,4 +23,4 @@
   lineinfile:
     dest: /etc/fstab
     state: present
-    line: "/dev/{{ accounts_disk }}    /mnt/solana-accounts    ext4    defaults    0    1"
+    line: "/dev/{{ ledger_disk }}    /mnt/solana-ledger    ext4    defaults    0    1"
