--- a/hosts.yaml
+++ b/hosts.yaml
@@ -2,4 +2,4 @@
 ansible_user=ubuntu
 
 [validators]
-validator1 ansible_host=186.233.187.64 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_ed25519
+validator ansible_host=186.233.187.64 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_ed25519
