--- a/roles/common/tasks/deps.yaml
+++ b/roles/common/tasks/deps.yaml
@@ -21,6 +21,17 @@
     - htop
     - acl
       
+- name: some python utils
+  become: true
+  become_user: solana
+  ansible.builtin.pip:
+    name:
+      - tqdm
+      - requests
+      - pynacl
+      - base58
+    executable: pip3
+      
 - name: check if cargo is installed
   become: true
   become_user: solana
