--- a/roles/jito/tasks/main.yaml
+++ b/roles/jito/tasks/main.yaml
@@ -12,3 +12,18 @@
 - name: render files
   import_tasks: files.yaml
 
+- name: snapshot download
+  include_tasks: snapshot_downloader.yaml
+  when: download_snapshot|default(true)|bool == true
+
+- name: restart without waiting
+  become: true
+  become_user: root
+  shell: /home/solana/restart.sh 1
+  when: download_snapshot|default(true)|bool == true
+
+- name: restart with waiting
+  become: true
+  become_user: root
+  shell: /home/solana/restart.sh
+  when: download_snapshot|default(true)|bool == false
