--- a/roles/common/tasks/disks.yaml
+++ b/roles/common/tasks/disks.yaml
@@ -14,7 +14,7 @@
 - name: mount disks for accounts
   become: true
   become_user: root
-  shell: mount /dev/{{ ledger_disk }} /mnt/solana-ledger
+  shell: mount /dev/{{ ledger_disk }} /mnt/solana-ledger && chown -R solana:solana /mnt/solana-ledger
   when: mount_mnt.rc != 0
 
 - name: add mounted disk to fstab
