--- a/roles/jito/defaults/main.yaml
+++ b/roles/jito/defaults/main.yaml
@@ -1,10 +1,16 @@
 ---
+# Supply a valid jito block engine cluster
+# testnet, mainnet
+cluster: mainnet
+
 # Supply a valid jito block engine location
-# Mainnet: amsterdam, frankfurt, ny, tokyo
-# Testnet: dallas, ny
+# mainnet: amsterdam, frankfurt, ny, tokyo
+# testnet: dallas, ny
 location: "ny"
+
 # commission in basis points. 100 bps = 1%
 commission-bps: 800
+
 # optional. sends metricss to solana's public influx. encouraged to set true since its helps labs and others debug
 # if something is wrong with your validator
 metrics: true
