--- a/hosts.example.yaml
+++ b/hosts.example.yaml
@@ -2,4 +2,5 @@
 ansible_user=ubuntu
 
 [validators]
-validator ansible_host=0.0.0.0 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+# ansible_host should be the IP of your validator
+validator ansible_host=172.1.0.1 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
